# mihomo_client_ohos

./: .gitignore  build-profile.json5  harmonyos-mihomo-product-design.md  mvp-01-development-plan.md  next-stage-development-plan.md
AppScope/: app.json5
core/mihomo/: go.mod
core/mihomo/config/: config.go
core/mihomo/listener/: listener.go
core/mihomo/openharmony_bridge/: main.go  poc04_minimal.yaml
core/mihomo/openharmony_probe_adapter/: main.go
core/mihomo/openharmony_probe_adapter_outbound/: main.go
core/mihomo/openharmony_probe_adapter_outboundgroup/: main.go
core/mihomo/openharmony_probe_adapter_provider/: main.go
core/mihomo/openharmony_probe_bare/: main.go
core/mihomo/openharmony_probe_common/: main.go
core/mihomo/openharmony_probe_components/: main.go
core/mihomo/openharmony_probe_config/: main.go
core/mihomo/openharmony_probe_constant/: main.go
core/mihomo/openharmony_probe_dns/: main.go
core/mihomo/openharmony_probe_executor/: main.go
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/cpp/: CMakeLists.txt  poc_napi.cpp
entry/src/main/cpp/types/libpoc_napi/: index.d.ts  oh-package.json5
patches/: poc02-openharmony-go-runtime-notes.md
poc/go-core/: go.mod  poc_go_core.go  protect_bridge.c  syscall_openharmony.go
scripts/: build_poc02_go_core.sh  build_poc04_mihomo_core.sh  huawei_tools_env.sh  run_mvp01_browser_verify.sh  run_mvp01_route_probe_verify.sh  run_mvp01_smoke.sh  run_mvp01_special_smoke.sh  run_mvp01_subscription_route_probe.sh  run_poc03_udp_echo_server.py  run_poc_regression.sh
(+244 files in other folders)
